--- a/src/components/PokedexPage.module.css
+++ b/src/components/PokedexPage.module.css
@@ -23,7 +23,6 @@
   margin: 8px auto;
   border: 1px solid gray;
   border-radius: 8px;
-  width: 50vw;
   height: 100px;
   cursor: pointer;
   background-color: lightgray;
